# TouchGrass

./: README.md  brand-guidelines.md  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
docs/: open-bugs.md  release-guide.md
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_state.rs  events.rs  idle_detection.rs  lib.rs  main.rs  tray.rs
src/routes/: +layout.svelte  +page.svelte
