[package]
name = "touchgrass"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "touchgrass_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.9", features = ["tray-icon"] }
tauri-plugin-autostart = "2.5"
tauri-plugin-notification = "2.3"
tauri-plugin-opener = "2.5"
tauri-plugin-store = "2.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
user-idle2 = "0.6"
rand = "0.9"

[target.'cfg(target_os = "linux")'.dependencies]
notify-rust = "4.11"
